--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.4.5",
     "next": "^13.4.9",
     "react": "18.2.0",
+    "react-datocms": "^4.1.3",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
     "sass": "^1.63.4",
