--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "contentful": "^10.3.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "next": "^13.4.9",
