--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "contentful": "^10.3.4",
+    "disable-scroll": "^0.6.0",
     "dotenv": "^16.3.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
-    "next": "^13.4.12",
+    "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
